debian/monitoring-elastics/tests/nginx-api-gateway-grpc/k8s/grpc-test-hellow-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s
    kompose.version: 1.26.1 (HEAD)
  labels:
    app: grpc-test-hellow
    io.kompose.service: hw1
  name: hw1
spec:
  ports:
    - name: grpc
      port: 50051
      targetPort: 50051
  selector:
    io.kompose.service: hw1
status:
  loadBalancer: {}
